Bug 433134 - Cannot highlight task when hovering in Wayland
Summary: Cannot highlight task when hovering in Wayland
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Task Manager and Icons-Only Task Manager widgets (other bugs)
Version First Reported In: 5.21.0
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords: wayland-only
: 429215 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-02-18 01:52 UTC by kdbase-kdebug
Modified: 2021-06-01 20:25 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.22
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description kdbase-kdebug 2021-02-18 01:52:07 UTC
SUMMARY


STEPS TO REPRODUCE
1. Log into Plasma Wayland session.
2. Configure panel with task manager or icons-only task manager.  Configure to highlight when hovering over a task.
3. Hover over a task.

OBSERVED RESULT
Nothing happens.

EXPECTED RESULT
The task is 'highlighted'.  Even if it's in a different workspace, the task window appears on the screen as long as the cursor remains over the task manager icon.


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
This happens only in a Wayland session.  An X Windows session works fine.  I suspect this isn't a bug per se, but rather a feature that the developers have not had time to implement yet.  I'm reporting it in case they are unaware of the problem.  I personally use the feature a lot, but it may not be so important to others.

I've tested in both Fedora Rawhide and Arch Linux.
Comment 1 Méven Car 2021-02-18 05:55:23 UTC
This is a functionality that is not implemented yet.

From plasma-window-management.xml :
  <!--
    <request name="highlight">
      <description summary="highlight the window">
        Tell the compositor to highlight this window.
      </description>
    </request>
  -->

Depends on the HighlightWindowEffect KWin effect that will some porting from X11 specifics to work on Wayland.
Comment 2 David Redondo 2021-04-08 09:08:15 UTC
Git commit ee49020b5e291347e35dd24d4348509ed70335e6 by David Redondo.
Committed on 08/04/2021 at 09:07.
Pushed by davidre into branch 'master'.

Use DBus interface to highlight windows

The KWin effect has gained a dbus interface to also support wayland.

M  +12   -38   applets/taskmanager/plugin/backend.cpp
M  +1    -2    applets/taskmanager/plugin/backend.h

https://invent.kde.org/plasma/plasma-desktop/commit/ee49020b5e291347e35dd24d4348509ed70335e6
Comment 3 Bharadwaj Raju 2021-05-12 06:44:08 UTC
*** Bug 429215 has been marked as a duplicate of this bug. ***
Comment 4 kdbase-kdebug 2021-05-19 21:45:23 UTC
I ran the beta of 5.22 on both Fedora Rawhide and Arch Linux.  In both cases, this is still broken.  The Task Manager shows an option to highlight the window when hovering over the icon, except that now the option is a suboption of the Show Tooltips option (previously, they were independent).  In any case, the suboption does not do anything.  Whether I check it or not, a tooltip is shown, but the window is not highlighted.

Of course, these are beta releases (labeled as 5.21.9), and the option may work in the full release.
Comment 5 Patrick Silva 2021-05-31 13:24:27 UTC
(In reply to kdbase-kdebug from comment #4)
> I ran the beta of 5.22 on both Fedora Rawhide and Arch Linux.  In both
> cases, this is still broken.  The Task Manager shows an option to highlight
> the window when hovering over the icon, except that now the option is a
> suboption of the Show Tooltips option (previously, they were independent). 
> In any case, the suboption does not do anything.  Whether I check it or not,
> a tooltip is shown, but the window is not highlighted.
> 
> Of course, these are beta releases (labeled as 5.21.9), and the option may
> work in the full release.

Since Plasma 5.22 beta, you need to hover over the window preview of the tooltip.
Comment 6 kdbase-kdebug 2021-05-31 21:41:48 UTC
Thanks.  In fact, I again tried the 5.22 beta yesterday, before seeing your note, to see if this worked.  It didn't (I thought), until I happened to move the cursor into the tooltip preview, and saw the full window preview.  I've been happily logged into Plasma Wayland since then.

You may want to add a sentence in the release notes about the new behavior.
Comment 7 Patrick Silva 2021-05-31 22:11:47 UTC
(In reply to kdbase-kdebug from comment #6)

> You may want to add a sentence in the release notes about the new behavior.

I do not write the release notes, but I totally agree. :)
The new behavior was mentioned in beta announcement, under "General Plasma":

"The Task Manager’s 'Highlight Windows' feature now only highlights windows when hovering over that window’s thumbnail in the tooltip, and this behavior has been turned on by default"

see https://kde.org/announcements/plasma/5/5.21.90/
Comment 8 Grósz Dániel 2021-05-31 22:15:26 UTC
(In reply to Patrick Silva from comment #5)
> Since Plasma 5.22 beta, you need to hover over the window preview of the
> tooltip.

Expect new bug reports about this... :)

I for one often use the feature to find the window I'm looking for by moving my mouse along the task bar, so I don't think I'll like this change.
Comment 9 Nate Graham 2021-06-01 20:25:17 UTC
Fortunately enough, re-adding the old behavior as an option should be fairly trivial, should we get enough complaints. :)