Use DBus interface to highlight windows

The KWin effect has gained a dbus interface to also support wayland.
BUG:433134